examples/errors/test_directory_not_found.flow
dir : "nonexistent_directory" -> files -> length -> print